rgw: Initial commit for User Policy REST APIs.
Resolves: rhbz#1471626

Signed-off-by: Pritha Srivastava <prsrivas@redhat.com>
(cherry picked from commit e285391cf231e8f0e2e76331f4abbcbb07bd6619)

--- a/src/rgw/CMakeLists.txt
+++ b/src/rgw/CMakeLists.txt
@@ -132,6 +132,7 @@ set(rgw_a_srcs
   rgw_crypt.cc
   rgw_crypt_sanitize.cc
   rgw_iam_policy.cc
+  rgw_rest_user_policy.cc
   rgw_sts.cc
   rgw_rest_sts.cc)
 
