Initial work for OPA-Ceph integration
Resolves: rhbz#1668050

Signed-off-by: Ashutosh Narkar <anarkar4387@gmail.com>
(cherry picked from commit 631a036a6b02d30d12d0a1c6cae25c9aa0c38af1)
Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>

--- a/src/rgw/CMakeLists.txt
+++ b/src/rgw/CMakeLists.txt
@@ -134,7 +134,8 @@ set(rgw_a_srcs
   rgw_iam_policy.cc
   rgw_rest_user_policy.cc
   rgw_sts.cc
-  rgw_rest_sts.cc)
+  rgw_rest_sts.cc
+  rgw_opa.cc)
 
 gperf_generate(${CMAKE_SOURCE_DIR}/src/rgw/rgw_iam_policy_keywords.gperf
   rgw_iam_policy_keywords.frag.cc)
